--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,9 @@
----
+
+----
+
+----
 Installing SeansLifeArchive/Images/TinyTower
----
+----
 
 SeansLifeArchive/Images/TinyTower currently doesn't require installation, it is just a collection of images and data. It is part of the Seanpm2001 Life Archive project, and for proper "installation" the repository should be placed under /SeansLifeArchive/<yourInstalledVersion>/Resources/Images/
 
@@ -14,6 +17,8 @@ Some included files are in Markdown format (*.md) for best viewing, you should u
 
 Some included files are in PDF format. They should be opened with a document viewer capable of handling PDF documents.
 
----
-Install instructions file version: 1 (Wednesday, August 18th 2021 at 8:10 pm)
----
+----
+Install instructions file version: 2 (2022, Sunday, April 24th at 9:41 pm PST)
+----
+
+----
